--- a/src/main/resources/templates/books/popular.html
+++ b/src/main/resources/templates/books/popular.html
@@ -9,10 +9,9 @@
 <!--[if IE 9]>
 <html class="ie9" lang="ru">
 <![endif]-->
-<!--[if gt IE 9]><!-->
-<html lang="ru" xmlns="http://www.w3.org/1999/html"> <!--<![endif]-->
+<!--[if gt IE 9]><!--> <html lang="ru"> <!--<![endif]-->
 <head>
-  <title th:text="#{topbar.authors}">Страница с авторами</title>
+  <title th:text="#{topbar.popular}">Популярное</title>
   <meta name="description" content="Описание страницы">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
@@ -24,11 +23,11 @@
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-ExtraBold.woff2" as="font" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assets/css/fonts.min.css?v=59641147">
-  <link rel="stylesheet" href="/assets/css/basic.min.css?v=59641147">
-  <link rel="stylesheet" href="/assets/css/extra.min.css?v=59641147"><!--[if lt IE 9]>
+  <link rel="stylesheet" href="/assets/css/fonts.min.css?v=45035206">
+  <link rel="stylesheet" href="/assets/css/basic.min.css?v=45035206">
+  <link rel="stylesheet" href="/assets/css/extra.min.css?v=45035206"><!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  <script defer src="/assets/js/scripts.min.js?v=59641147"></script>
+  <script defer src="/assets/js/scripts.min.js?v=45035206"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="../../static/js/switchLocale.js" type="text/javascript"></script>
 </head>
@@ -42,45 +41,29 @@
           | браузера здесь&nbsp;
       | для правильного отображения сайта.
   -->
-  <header th:replace="~{fragments/header_fragment :: headFragment(authors='menu-item menu-item_ACTIVE', status='unauthorized')}"></header>
+  <header th:replace="~{fragments/header_fragment :: headFragment(popular='menu-item menu-item_ACTIVE', status='unauthorized')}"></header>
   <div class="Middle">
     <div class="wrap">
       <main class="Middle-main">
-        <h1 class="Middle-title" th:text="#{topbar.authors}">Авторы
-        </h1>
+        <ul class="breadcrumbs">
+          <li class="breadcrumbs-item"><a href="/bookshop/main" th:href="@{/}" th:text="#{topbar.main}">Главная</a>
+          </li>
+          <li class="breadcrumbs-item"><a href="/bookshop/genres" th:href="@{/bookshop/genres}" th:text="#{middlebar.books}">Книги</a>
+          </li>
+          <li class="breadcrumbs-item breadcrumbs-item_current" th:text="#{topbar.popular}"><span>Популярное</span>
+          </li>
+        </ul>
         <div class="Section">
-          <div class="Authors">
-            <div class="Authors-links">
-              <a th:each="authorList : ${authorsMap}" class="Authors-link" href="#a"
-              th:href="'#' + ${#strings.toLowerCase(authorList.key)}" th:text="${authorList.key}">
-              A</a>
-            </div>
-            <div class="Authors-block" th:each="authorList : ${authorsMap}">
-              </p><a class="Authors-title" id="a" th:id="${#strings.toLowerCase(authorList.key)}" href="/bookshop/authors" th:href="@{/bookshop/authors}"
-                  th:text="${authorList.key}">А
-              </a>
-              <div class="Authors-letter">
-                <div th:each="author : ${authorList.value}" class="Authors-item"><a
-                        href="/authors/slug.html" th:text="${author.name}">Абгарян Наринэ</a>
-                </div>
-              </div>
-            </div>
+          <div class="Section-header">
+            <h1 class="Section-title" th:text="#{topbar.popular}">Популярное
+            </h1>
           </div>
+          <div class="Cards Cards_refresh"
+               th:replace="~{fragments/books_pool_fragment :: pool('popular', ${bookList})}"></div>
         </div>
       </main>
     </div>
   </div>
   <footer th:replace="~{fragments/footer_fragment :: footFragment}"></footer>
   <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
-  <!--+menu(-->
-  <!--    'Это раз',-->
-  <!--    'Это два',-->
-  <!--    'Это три'-->
-  <!--)-->
-  <!--br-->
-  <!--br-->
-  <!--+menu._vt-->
-  <!--    +menuItem Это раз-->
-  <!--    +menuItem.-item_danger Это два-->
-  <!--    +menuItem Это три-->
 </body></html>
